# transkun_mcp

./: README.md  gradio_cli_wrapper.py  pyproject.toml
.tasks/: task001-pack-as-gradio-mcp.md  tasks.md
